<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/nextButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/scroll"
        android:text="@string/next" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/cancelButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/scroll"
        android:text="@string/cancel" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyTextView
        android:id="@+id/abilityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/nextButton"
        android:layout_below="@+id/nameScroll"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/title"
        android:src="@drawable/dragon" />

    <RelativeLayout
        android:id="@+id/nameScroll"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/abilityName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/scroll" >

        <com.dmurphy.dnd.csheet.fantasy.FantasyEditText
            android:id="@+id/char_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/char_name"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

    </RelativeLayout>

</RelativeLayout>