<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/splash"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/new_char"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_below="@+id/splash"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/scroll"
        android:text="@string/new_character" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/load_char"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/new_char"
        android:layout_below="@+id/new_char"
        android:background="@drawable/scroll"
        android:text="@string/load_character" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/load_char"
        android:layout_below="@+id/load_char"
        android:background="@drawable/scroll"
        android:text="@string/about" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyTextView
        android:id="@+id/abilityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_char"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>