<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/nextButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/scroll"
        android:text="@string/next" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/previousButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/scroll"
        android:text="@string/previous" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyTextView
        android:id="@+id/abilityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/skills"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/nextButton"
        android:layout_below="@id/abilityName"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp" >

    </ListView>

</RelativeLayout>