<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/nextButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/scroll"
        android:text="@string/next" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/previousButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/scroll"
        android:text="@string/previous" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyTextView
        android:id="@+id/ability_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/weapons"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyTextView
        android:id="@+id/weapon_description"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/previousButton"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/weapon_pic"
        android:background="@drawable/scroll_square"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/weapon_pic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/nextButton"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/weapons"
        android:src="@drawable/ic_launcher" />

    <ExpandableListView
        android:id="@+id/weapon_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weapon_description"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ability_splash"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >
    </ExpandableListView>

    <com.dmurphy.dnd.csheet.fantasy.FantasyTextView
        android:id="@+id/gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nextButton"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#D9D218" />

    <ImageView
        android:id="@+id/gold_pic"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_above="@id/gold"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/equipment"
        android:src="@drawable/coins" />

</RelativeLayout>