<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/nextButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/scroll"
        android:text="@string/next" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/previousButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/scroll"
        android:text="@string/previous" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyTextView
        android:id="@+id/ability_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/equipment"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyTextView
        android:id="@+id/gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nextButton"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#D9D218" />

    <ImageView
        android:id="@+id/gold_pic"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_above="@id/gold"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/equipment"
        android:src="@drawable/coins" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nextButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ability_splash"
        android:baselineAligned="true" >

        <ListView
            android:id="@+id/available_items"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="2" >

        </ListView>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/select_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_above="@+id/deselect_button"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:background="@drawable/right_button" />

            <Button
                android:id="@+id/deselect_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/left_button" />

        </RelativeLayout>

        <ListView
            android:id="@+id/selected_items"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="2" >

        </ListView>
    </LinearLayout>

</RelativeLayout>