<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/nextButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/scroll"
        android:text="@string/next" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyButton
        android:id="@+id/previousButton"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/scroll"
        android:text="@string/previous" />

    <com.dmurphy.dnd.csheet.fantasy.FantasyTextView
        android:id="@+id/abilityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/armor"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/nextButton"
        android:layout_below="@+id/armorContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/scroll_square"
        android:text=""
        android:textColor="#000000" />

    <GridLayout
        android:id="@+id/armorContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/abilityName"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" >

        <com.dmurphy.dnd.csheet.fantasy.FantasyButton
            android:id="@+id/cloth_armor"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_row="1"
            android:background="@drawable/cloth_armor" />

        <com.dmurphy.dnd.csheet.fantasy.FantasyButton
            android:id="@+id/leather_armor"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_row="1"
            android:background="@drawable/leather_armor" />

        <com.dmurphy.dnd.csheet.fantasy.FantasyButton
            android:id="@+id/hide_armor"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="3"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_row="1"
            android:background="@drawable/hide_armor" />

        <com.dmurphy.dnd.csheet.fantasy.FantasyButton
            android:id="@+id/chainmail"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_row="2"
            android:background="@drawable/chainmail" />

        <com.dmurphy.dnd.csheet.fantasy.FantasyButton
            android:id="@+id/scale_armor"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_row="2"
            android:background="@drawable/scale_armor" />

        <com.dmurphy.dnd.csheet.fantasy.FantasyButton
            android:id="@+id/plate_armor"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="3"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_row="2"
            android:background="@drawable/plate_armor" />

        <com.dmurphy.dnd.csheet.fantasy.FantasyButton
            android:id="@+id/light_shield"
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_row="3"
            android:background="@drawable/light_shield" />

        <com.dmurphy.dnd.csheet.fantasy.FantasyButton
            android:id="@+id/heavy_shield"
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_row="3"
            android:background="@drawable/heavy_shield" />
    </GridLayout>

    <com.dmurphy.dnd.csheet.fantasy.FantasyTextView
        android:id="@+id/gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nextButton"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#D9D218" />

    <ImageView
        android:id="@+id/gold_pic"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_above="@id/gold"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/equipment"
        android:src="@drawable/coins" />

</RelativeLayout>